<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.picodiploma.mybottomnavigation.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.example.giziku.news.NewsFragment"
        android:label="@string/berita"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_reccomendation"
        android:name="com.example.giziku.reccomendation.ReccomendationFragment"
        android:label="@string/rekomendasi_makanan"
        tools:layout="@layout/fragment_reccomendation" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dicoding.picodiploma.mybottomnavigation.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>