<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_news"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".news.detail.DetailNewsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_detail"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:src="@drawable/dummy_news_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/news_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:textStyle="italic"
                android:text="@string/text_news"
                android:fontFamily="@font/lato_semi_bold"

                app:layout_constraintTop_toBottomOf="@+id/img_detail"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/news_titles"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/lato_bold"
                tools:text="@string/title2"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/news_text" />

            <TextView
                android:id="@+id/text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="15sp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/lato_semi_bold"
                android:text="@string/text_by"
                app:layout_constraintTop_toBottomOf="@+id/news_titles"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/author_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="12dp"
                android:textSize="15sp"
                android:fontFamily="@font/lato_semi_bold"
                android:text="@string/news_author2"
                app:layout_constraintTop_toBottomOf="@+id/news_titles"
                app:layout_constraintStart_toEndOf="@id/text_1" />

            <TextView
                android:id="@+id/tv_publish_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:textSize="13sp"
                android:fontFamily="@font/lato_semi_bold"
                android:text="@string/publish_time2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_1" />

            <TextView
                android:id="@+id/news_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/news_desc2"
                android:lineSpacingMultiplier="1.5"
                android:textSize="19sp"
                android:fontFamily="@font/lato_semi_bold"
                android:textStyle="bold"
                android:lineSpacingExtra="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_publish_time" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>