<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="5dp">

        <ImageView
            android:id="@+id/img_news"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:contentDescription="@string/dummy_img"
            card_view:layout_constraintBottom_toTopOf="@+id/news_titles"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/dummy_news_photo" />

        <TextView
            android:id="@+id/news_titles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_news"
            android:fontFamily="@font/lato_bold"
            android:maxLines="3"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintTop_toBottomOf="@+id/img_news"
            card_view:layout_constraintBottom_toTopOf="@+id/source_news"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            tools:text="@string/news_title" />

        <TextView
            android:id="@+id/source_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="6dp"
            android:layout_toEndOf="@id/img_news"
            android:textSize="12sp"
            android:fontFamily="@font/lato_semi_bold"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            tools:text="@string/news_author" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>